# opengl-3d-renderer

./: .gitignore  CMakeLists.txt  README.md  run.bat
include/: camera.h  mesh.h  model.h  orbit.h  shader.h  texture.h
shaders/: earth.frag  earth.vert  line.frag  line.vert  phong.frag  phong.vert
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  orbit.cpp  shader.cpp  texture.cpp
